k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arithmetic
  labels:
    app.kubernetes.io/name: arithmetic-super-app
