k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arithmetic-api
  namespace: arithmetic
spec:
  type: ClusterIP
  selector:
    app: arithmetic-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
